--- a/readme.html
+++ b/readme.html
@@ -5,15 +5,14 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     </head>
     <body>
-        <markup>
-            
+        <lineup>
             #(1) README
-            italic() 内容由Markup前端编译器生成
+            italic() 内容由Lineup前端编译器生成
 
-            #(2) 关于Markup
+            #(2) 关于Lineup
             p() 由AlbertZ原创开发的简单、优雅、轻量、开放的标记语言。可以运用在前段开发、富文本写作等场景，支持在HTML直接引入，替代HTML的大量功能。
  
-            #(2) 为什么选择Markup？
+            #(2) 为什么选择Lineup？
             ul() \
                 li() 简单：语法单一简单，特殊符号少，嵌套自然，无论有无编程基础都能快速上手
                 li() 优雅：类似YAML和Python的设计原则，强制缩进，大量减少HTML代码的重复点
@@ -23,25 +22,25 @@
             #(2) 下载和使用
             p() \
                 span() 可以在
-                @("https://gitee.com/albert_zhong/markup") https://gitee.com/albert_zhong/markup
-                span() 下载Markup最新版本的源代码。
-            p() 以在HTML文件中引用为例。将所有源代码置于HTML文件的同一层级。在文件中body标签最后以module形式引入markup.js，并编译所有dom内容。
+                @("https://gitee.com/albert_zhong/lineup", target:_blank) https://gitee.com/albert_zhong/Lineup
+                span() 下载Lineup最新版本的源代码。
+            p() 以在HTML文件中引用为例。将所有源代码置于HTML文件的同一层级。在文件中body标签最后以module形式引入Lineup.js，并编译所有dom内容。
             pre() \
-                code() &lt;script type="module"&gt; import * as Markup from './markup.js'; Markup.compileDocument(); &lt;/script&gt;
-            p() 之后即可在script标签以上的部分的markup标签内直接插入Markup代码。打开页面时，编译器会自动将markup标签内的内容转化为HTML。这个过程几乎没有耗时。
+                code() &lt;script type="module"&gt; import * as Lineup from './Lineup.js'; Lineup.compileDocument(); &lt;/script&gt;
+            p() 之后即可在script标签以上的部分的Lineup标签内直接插入Lineup代码。打开页面时，编译器会自动将Lineup标签内的内容转化为HTML。这个过程几乎没有耗时。
             pre() \
-                code() &lt;markup&gt;#(1) TEST HEADING&lt;/markup&gt;
-            p() markup.js和compile.js中还提供了生成语法树、组合HTML、编译成字符的底层和封装函数，可以在前端或Node.js中导入并调用。
+                code() &lt;Lineup&gt;#(1) TEST HEADING&lt;/Lineup&gt;
+            p() lineup.js和compile.js中还提供了生成语法树、组合HTML、编译成字符的底层和封装函数，可以在前端或Node.js中导入并调用。
 
-            #(2) Markup语法
+            #(2) Lineup语法
 
             #(3) 元素定义
             p() \
                 span() 元素定义的基本语法为 
                 code() 元素名(参数) 内容
-                span() 。其中参数是可选的，但必须保留圆括号。元素名和内容是必须的。元素名仅可以是Markup支持的元素。内容部分不得留空，元素必须在一行内完成定义，否则可能导致编译错误。
+                span() 。其中参数是可选的，但必须保留圆括号。元素名和内容是必须的。元素名仅可以是Lineup支持的元素。内容部分不得留空，元素必须在一行内完成定义，否则可能导致编译错误。
             pre() <code>#(1) TEST HEADING</code><code>p(class:content) THE CONTENT</code>
-            p() 一般情况下，Markup元素名与html标签名称相同。但对于常用标签，为了便于理解记忆，引入了特殊符号和不同的文字表达。
+            p() 一般情况下，Lineup元素名与html标签名称相同。但对于常用标签，为了便于理解记忆，引入了特殊符号和不同的文字表达。
             @(#ele-table) 具体对应关系如文末常量信息对象。
 
             #(3) 参数属性
@@ -57,11 +56,11 @@
             pre() <code>@("https://www.baidu.com") TEST ANCHOR</code>
 
             #(3) 嵌套语法
-            p() 在Markup中，需要用嵌套标识符'\'（反斜杠）和缩进同时表示嵌套关系。缩进符号只支持四个空格，无法使用制表符或两个空格。
+            p() 在Lineup中，需要用嵌套标识符'\'（反斜杠）和缩进同时表示嵌套关系。缩进符号只支持四个空格，无法使用制表符或两个空格。
             p() 嵌套标识符'\'表示嵌套的开始。在父级元素的内容部分使用这一符号。需要注意，标识符前只可以为空格，标识符后不能有任何字符（包括空格），否则编译器可能无法识别。
             p() 在需要被嵌套的子元素前增加一次缩进层级。嵌套的结束之处无需标识，只需要减少一次缩进层级。需要注意，缩进是强制的，但编译器不会做缩进检查。不正确的缩进可能导致意想不到的错误。
             pre() <code>div() \</code><code>&emsp;&emsp;&emsp;&emsp;#(1) THE HEADING</code></code><code>&emsp;&emsp;&emsp;&emsp;p() \</code><code>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;@(#anchor) TEST ANCHOR</code><code>&emsp;&emsp;&emsp;&emsp;p() CONTENT</code><code>div() FOOTER</code>
-        </markup>
+        </lineup>
         <pre>
             <a id="ele-table"><h3>附：元素名称对象</h3></a>
             <code>
@@ -124,8 +123,8 @@ const ordinaryElements = {
             </code>
         </pre>
         <script type="module">
-            import * as Markup from './markup.js';
-            Markup.compileDocument();
+            import * as Lineup from './lineup.js';
+            Lineup.compileDocument();
             document.addEventListener('DOMContentLoaded', (event) => {
                 document.querySelectorAll('code').forEach((el) => {
                     hljs.highlightElement(el);
