--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,7 @@
             pre() \
                 code() &lt;lineup&gt;#(1) TEST HEADING&lt;/lineup&gt;
             p() lineup.js和compile.js中还提供了生成语法树、组合HTML、编译成字符的底层和封装函数，可以在前端或Node.js中导入并调用。
-            p() 如果想要避免不必要的cors问题和import不支持的问题，建议使用lineup-min.js的纯代码版本。代码由作者自己编写的link.py插件生成，完全等价于module版本。用以下代码导入：
+            p() 如果想要避免不必要的cors问题和import不支持的问题，建议使用lineup-min.js的纯代码版本（推荐）。代码由作者自己编写的link.py插件生成，完全等价于module版本。用以下代码导入：
             pre() \
                 code() &lt;script src="lineup-min.js"&gt;&lt;/script&gt;&lt;script&gt;Lineup.compileDocument(); &lt;/script&gt;
             p() 本站长期提供cdn链接（{@("http://lib.albertz.top/lineup/lineup-min.js", target:new) http://lib.albertz.top/lineup/lineup-min.js }）。
